@@ -8,16 +8,16 @@ Section Headers:
        Size              EntSize          Flags  Link  Info  Align
   \[ 0\]                   NULL             0000000000000000  00000000
        0000000000000000  0000000000000000           0     0     0
-  \[ 1\] \.text             PROGBITS         0000000000000000  00000040
-       0000000000000000  0000000000000000  AX       0     0     16
-  \[ 2\] \.data             PROGBITS         0000000000000000  00000040
-       0000000000000000  0000000000000000  WA       0     0     1
-  \[ 3\] \.bss              NOBITS           0000000000000000  00000040
-       0000000000000000  0000000000000000  WA       0     0     1
-  \[ 4\] \.text             PROGBITS         0000000000000000  00000040
-       0000000000000010  0000000000000000 AXG       0     0     16
-  \[ 5\] \._foo             GROUP            0000000000000000  00000050
+  \[ 1\] \._foo             GROUP            0000000000000000  00000040
        0000000000000008  0000000000000004           7     6     4
+  \[ 2\] \.text             PROGBITS         0000000000000000  00000050
+       0000000000000000  0000000000000000  AX       0     0     16
+  \[ 3\] \.data             PROGBITS         0000000000000000  00000050
+       0000000000000000  0000000000000000  WA       0     0     1
+  \[ 4\] \.bss              NOBITS           0000000000000000  00000050
+       0000000000000000  0000000000000000  WA       0     0     1
+  \[ 5\] \.text             PROGBITS         0000000000000000  00000050
+       0000000000000010  0000000000000000 AXG       0     0     16
   \[ 6\] \.shstrtab         STRTAB           0000000000000000  00000058
        0000000000000032  0000000000000000           0     0     1
   \[ 7\] \.symtab           SYMTAB           0000000000000000  000002d0
