@@ -1,4 +1,9 @@
+2004-11-25  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/ia64/group-1.d: Adjust expected secion ordering.
+
 2004-11-25 Jan Beulich  <jbeulich@novell.com>
+
 	* gas/i386/x86-64-inval.[sl]: Remove sahf/lahf.
 
 2004-11-24  Paul Brook  <paul@codesourcery.com>
